// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addDirections multiple direction sections 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "1",
    "label": "section 1",
    "recipeid": "123",
    "steps": Array [
      Object {
        "createdAt": "2020-05-10 00:09:45.511 +00:00",
        "id": "3",
        "sectionid": "1",
        "text": "step 1",
        "updatedAt": "2020-05-10 00:10:45.511 +00:00",
      },
    ],
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "2",
    "recipeid": "123",
    "steps": Array [
      Object {
        "createdAt": "2020-05-10 00:09:45.511 +00:00",
        "id": "1",
        "sectionid": "2",
        "text": "step 1",
        "updatedAt": "2020-05-10 00:10:45.511 +00:00",
      },
      Object {
        "createdAt": "2020-05-10 00:11:45.511 +00:00",
        "id": "2",
        "sectionid": "2",
        "text": "step 2",
        "updatedAt": "2020-05-10 00:12:45.511 +00:00",
      },
    ],
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addDirections single direction section, all fields 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "1",
    "label": "section 1",
    "recipeid": "123",
    "steps": Array [
      Object {
        "createdAt": "2020-05-10 00:09:45.511 +00:00",
        "id": "3",
        "sectionid": "1",
        "text": "step 1",
        "updatedAt": "2020-05-10 00:10:45.511 +00:00",
      },
    ],
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addDirections single section, no steps provided, only label 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "1",
    "label": "section 1",
    "recipeid": "123",
    "steps": Array [],
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addDirections single section, only steps provided, no label 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": "2",
    "recipeid": "123",
    "steps": Array [
      Object {
        "createdAt": "2020-05-10 00:09:45.511 +00:00",
        "id": "1",
        "sectionid": "2",
        "text": "step 1",
        "updatedAt": "2020-05-10 00:10:45.511 +00:00",
      },
      Object {
        "createdAt": "2020-05-10 00:11:45.511 +00:00",
        "id": "2",
        "sectionid": "2",
        "text": "step 2",
        "updatedAt": "2020-05-10 00:12:45.511 +00:00",
      },
    ],
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`addRecipe calls store creator and returns result 1`] = `
Object {
  "dateAdded": "2020-05-10 00:00:45.511 +00:00",
  "dateUpdated": "2020-05-10 00:00:45.511 +00:00",
  "description": "some description",
  "directions": Array [],
  "id": "123",
  "photo": "http://photos.com/mine.jpg",
  "servings": 4,
  "source": Object {
    "display": "My Recipe source",
    "url": "http://source.com",
  },
  "timing": Object {
    "prep": Array [
      Object {
        "id": "1",
        "units": "MINUTE",
        "value": "2",
      },
    ],
    "total": Array [
      Object {
        "id": "2",
        "units": "MINUTE",
        "value": "20",
      },
      Object {
        "id": "3",
        "units": "HOUR",
        "value": "1",
      },
    ],
  },
  "title": "my title",
}
`;

exports[`deleteRecipe calls store destroy and returns result - id exists 1`] = `
Object {
  "message": undefined,
  "recipe": null,
  "success": true,
}
`;

exports[`deleteRecipe calls store destroy and returns result - id not found 1`] = `
Object {
  "message": "ID not found",
  "recipe": null,
  "success": false,
}
`;

exports[`directionStepsReducer properly reduces direction step array 1`] = `
Array [
  Object {
    "id": "1",
    "text": "step 1",
  },
  Object {
    "id": "2",
    "text": "step 2",
  },
  Object {
    "id": "3",
    "text": "step 1",
  },
]
`;

exports[`getAllRecipes returns array of recipes 1`] = `
Array [
  Object {
    "dateAdded": "2020-05-10 00:00:45.511 +00:00",
    "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
    "description": "the best recipe ever",
    "directions": Array [],
    "id": "123",
    "photo": "http://some.url.com/pic.jpg",
    "servings": 2,
    "source": Object {
      "display": "Mandy's Kitchen",
      "url": "http://some.url.com/recipe",
    },
    "timing": Object {
      "prep": Array [
        Object {
          "id": "1",
          "units": "MINUTE",
          "value": "2",
        },
      ],
      "total": Array [
        Object {
          "id": "2",
          "units": "MINUTE",
          "value": "20",
        },
        Object {
          "id": "3",
          "units": "HOUR",
          "value": "1",
        },
      ],
    },
    "title": "my first recipe",
  },
]
`;

exports[`getRecipe returns recipe 1`] = `
Object {
  "dateAdded": "2020-05-10 00:00:45.511 +00:00",
  "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
  "description": "the best recipe ever",
  "directions": Array [
    Object {
      "id": "1",
      "label": "section 1",
      "steps": Array [
        Object {
          "id": "1",
          "text": "step 1",
        },
        Object {
          "id": "2",
          "text": "step 2",
        },
      ],
    },
  ],
  "id": "123",
  "photo": "http://some.url.com/pic.jpg",
  "servings": 2,
  "source": Object {
    "display": "Mandy's Kitchen",
    "url": "http://some.url.com/recipe",
  },
  "timing": Object {
    "prep": Array [
      Object {
        "id": "1",
        "units": "MINUTE",
        "value": "2",
      },
    ],
    "total": Array [
      Object {
        "id": "2",
        "units": "MINUTE",
        "value": "20",
      },
      Object {
        "id": "3",
        "units": "HOUR",
        "value": "1",
      },
    ],
  },
  "title": "my first recipe",
}
`;
